[tool.poetry]
name = "tsururu"
version = "1.0.0"
description = "Python tool for time series forecasting"
authors = ["Alina Kostromina <AMaKostromina@sberbank.ru>", "Dmitry Simakov <Simakov.D.E@sberbank.ru>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/sb-ai-lab/tsururu"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
scikit-learn = "^1.3.2"
numpy = "^1.26.3"
pandas = "^2.2"
holidays = "^0.40"
scipy = "^1.11.4"
catboost = { version = ">=1.2.0", optional = true }
torch = { version = ">=1.9.0, <=2.0.0", optional = true }

[tool.poetry.extras]
catboost = ["catboost"]
torch = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/sb-ai-lab/tsururu"
Issues = "https://github.com/sb-ai-lab/tsururu/issues"