[project]
name = "tsururu"
version = "1.1.1.dev1"
description = "Python tool for time series forecasting"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alina Kostromina", email = "alina.kostromina@gmail.com" },
  { name = "Dmitry Simakov", email = "dmitryevsimakov@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "scikit-learn>=1.3.2,<2.0.0",
  "numpy>=1.26.3,<2.0.0",
  "pandas>=2.2,<3.0",
  "holidays>=0.40,<0.41",
  "scipy>=1.11.4,<2.0.0"
]

[project.optional-dependencies]
catboost = ["catboost>=1.2.0"]
pyboost = ["py-boost"]
torch = ["torch>=1.9.0", "einops", "transformers"]
all = [
  "catboost>=1.2.0",
  "py-boost",
  "torch>=1.9.0",
  "einops",
  "transformers"
]

[project.urls]
Homepage = "https://github.com/sb-ai-lab/tsururu"
Issues = "https://github.com/sb-ai-lab/tsururu/issues"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ipykernel = "^6.30.1"
