[project]
name = "tsururu"
version = "1.1.0"
description = "Python tool for time series forecasting"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alina Kostromina", email = "alina.kostromina@gmail.com" },
  { name = "Dmitry Simakov", email = "dmitryevsimakov@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "scikit-learn>=1.3.2",
  "numpy>=1.26.3",
  "pandas>=2.2",
  "holidays>=0.40",
  "scipy>=1.11.4"
]

[project.optional-dependencies]
catboost = ["catboost>=1.2.0"]
pyboost = ["py-boost"]
torch = ["torch>=1.9.0", "einops", "transformers"]
all = [
  "catboost>=1.2.0",
  "py-boost",
  "torch>=1.9.0",
  "einops",
  "transformers"
]

[project.urls]
Homepage = "https://github.com/sb-ai-lab/tsururu"
Issues = "https://github.com/sb-ai-lab/tsururu/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ipykernel>=6.0",
  "pre-commit>=4.5.1"
]
